# py-tgbot

./: Readme_副本.md  create_database.sql  frontend-api.md  index.html  main.py  package-lock.json  pyproject.toml
app/api/: auth.py  bot.py  servers.py  tasks.py  users.py
app/core/: auth.py  config.py  database.py  deps.py
app/models/: admin.py  bot.py  server.py  tag.py  task.py  user.py
app/schemas/: bot.py  message.py  server.py  tag.py  task.py  user.py
app/services/: scheduler.py  server.py  server_parser.py  telegram.py
